--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@docsearch/css": "^3.6.0",
+    "bootstrap": "^5.3.3"
   }
 }
